--- a/.github/workflows/ssh-login.yml
+++ b/.github/workflows/ssh-login.yml
@@ -3,7 +3,7 @@ name: SSH Login
 on:
   workflow_dispatch:  # 允许手动触发
   schedule:
-    - cron: "0 0 */20 * *"  # 每天午夜运行
+    - cron: "0 0 */20 * *"  # 每 20 天运行一次
 
 jobs:
   ssh-login:
@@ -18,12 +18,18 @@ jobs:
 
       - name: Process SSH Login
         run: |
-          # 读取 Secrets，并按行分割存入数组
-          IFS=$'\n' read -d '' -r -a servers <<< "${{ secrets.SSH_SERVER }}"
-          IFS=$'\n' read -d '' -r -a users <<< "${{ secrets.SSH_USER }}"
-          IFS=$'\n' read -d '' -r -a passwords <<< "${{ secrets.SSH_PASS }}"
+          # 读取 Secrets，使用逗号作为分隔符
+          IFS=',' read -r -a servers <<< "${{ secrets.SSH_SERVER }}"
+          IFS=',' read -r -a users <<< "${{ secrets.SSH_USER }}"
+          IFS=',' read -r -a passwords <<< "${{ secrets.SSH_PASS }}"
 
-          # 遍历每行的服务器、用户和密码
+          # 确保数组长度一致
+          if [[ ${#servers[@]} -ne ${#users[@]} || ${#servers[@]} -ne ${#passwords[@]} ]]; then
+            echo "Error: SSH_SERVER, SSH_USER, SSH_PASS 行数不匹配!"
+            exit 1
+          fi
+
+          # 遍历服务器、用户和密码
           for i in "${!servers[@]}"; do
             SERVER="${servers[$i]}"
             USER="${users[$i]}"
